# Financial-AI-Risk-Evaluation-Harness

./: .gitignore  Makefile  README.md  pyproject.toml
config/: risk_acceptance_policy.json
data/: README.md  eval_cases.csv  model_outputs_example.csv  risk_taxonomy.json  synthetic_credit_data.csv
docs/: INTERVIEW_GUIDE.md  VALIDATION_NOTES.md  evaluation_methodology.md  project_evolution.md
notebooks/: 01_evaluation_walkthrough.ipynb
policy_docs/: consumer_finance_policy.md  investment_risk_policy.md  lending_safety_policy.md  privacy_policy.md
reports/: ai_risk_evaluation_report.md  assistant_comparison.csv  category_metrics.csv  credit_model_group_metrics.csv  credit_model_metrics.csv  evaluation_metrics.csv  evaluation_results.csv  fairness_perturbations_baseline.csv  fairness_perturbations_guarded.csv  model_card.md  risk_acceptance_results.csv  risk_register.md
reports/byo_model_eval/: category_metrics.csv  evaluation_results.csv  failure_examples.csv  model_metrics.csv  severity_metrics.csv  summary_report.html  summary_report.md
src/fin_ai_risk_eval/: __init__.py  agent_tools.py  assistant.py  byo_evaluation.py  cli.py  config.py  credit_model.py  eval_case_generator.py  evaluators.py  fairness.py  html_report.py  metrics.py  output_loader.py  plotting.py  reporting.py  risk_acceptance.py  risk_taxonomy.py  (+4 more)
tests/: test_assistant.py  test_byo_evaluation.py  test_cli.py  test_credit_model.py  test_evaluators.py  test_fairness.py  test_metrics.py  test_synthetic_data.py  test_v2_supervisory_upgrade.py
web/: index.html  package-lock.json  package.json
(+2 files in other folders)
