[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fin-ai-risk-eval-harness"
version = "0.1.0"
description = "Offline evaluation harness for GenAI-like and agentic AI risks in consumer finance."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Portfolio Project" }]
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "scipy",
  "matplotlib",
  "pydantic",
  "typer",
  "rich",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
fin-ai-risk-eval = "fin_ai_risk_eval.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
